major alignment issue got resolved

--- a/_sass/override.scss
+++ b/_sass/override.scss
@@ -10,7 +10,7 @@ ol {
     /*max-width: 650px; done by Ajay G*/  
     margin-left: auto;
     margin-right: auto;
-    word-wrap: break-word;
+    /*word-wrap: break-word;* done by Ajay G/
 }
 
 .go-to-top {
